# pushmi

./: CMakeLists.txt
examples/: for_each.h
examples/for_each/: CMakeLists.txt  MonteCarloSYCL.cpp  basic.hpp  for_each_2.cpp  for_each_3.cpp  for_each_4.cpp  for_each_5.cpp  for_each_6.cpp  mandelCPP.hpp
